samples/_failures_safe/1761362498_fc8cde_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05fde64d.c: In function ‘main’:
./samples/SAFE/__tmp_05fde64d.c:176:16: error: missing terminating " character
  176 |         printf("
      |                ^
./samples/SAFE/__tmp_05fde64d.c:176:9: error: expected expression at end of input
  176 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_05fde64d.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05fde64d.c:176:9: error: expected declaration or statement at end of input
